// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "pip-services.users.applications.version1";
option java_outer_classname = "ApplicationsProtoV1";
option objc_class_prefix = "APPLICATIONS_CMD_V1";

package applications_v1;

message ErrorDescription {
  string type = 1;
  string category = 2;
  string code = 3;
  string correlation_id = 4;
  string status = 5;
  string message = 6;
  string cause = 7;
  string stack_trace = 8;
  map<string, string> details = 9;
}

message PagingParams {
    int64 skip = 1;
    int32 take = 2;
    bool total = 3;
}

message Application {
    string id = 1;
    map<string, string> name = 2;
    map<string, string> description = 3;
    string product = 4;
    string group = 5;
    string copyrights = 6;
    string url = 7;
    string icon = 8;
    int32 min_ver = 9;
    int32 max_ver = 10;
    repeated string access_rights = 11;
}

message ApplicationPage {
    int64 total = 1;
    repeated Application data = 2;
}

// The applications service definition.
service Applications {
  rpc get_applications (ApplicationPageRequest) returns (ApplicationPageReply) {}
  rpc get_application_by_id (ApplicationIdRequest) returns (ApplicationObjectReply) {}
  rpc create_application (ApplicationObjectRequest) returns (ApplicationObjectReply) {}
  rpc update_application (ApplicationObjectRequest) returns (ApplicationObjectReply) {}
  rpc delete_application_by_id (ApplicationIdRequest) returns (ApplicationObjectReply) {}
}

// The request message containing the application page request.
message ApplicationPageRequest {
  string correlation_id = 1;
  map<string, string> filter = 2;
  PagingParams paging = 3;
}

// The response message containing the application page response
message ApplicationPageReply {
  ErrorDescription error = 1;
  ApplicationPage page = 2;
}

// The request message containing the application id request.
message ApplicationIdRequest {
  string correlation_id = 1;
  string application_id = 2;
}

// The request message containing the application object request.
message ApplicationObjectRequest {
  string correlation_id = 1;
  Application application = 2;
}

// The response message containing the application object response
message ApplicationObjectReply {
  ErrorDescription error = 1;
  Application application = 2;
}

